@startuml 08_front_data_offline
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam noteBackgroundColor #FDF6E3
skinparam noteBorderColor #C4BCA3
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultFontName Inter
skinparam ArrowColor #63666A
skinparam class {
  BackgroundColor #E8EEF6
  BorderColor #3E6E9E
}
hide empty members

package "core.sync · FRONT" #F7F4EC {
  class SyncQueue {
    - dao : SyncOperationDao
    + enqueue(op : SyncOperation) : Unit
    + nextBatch(limit : Int) : List<SyncOperation>
    + markDone(id : Long) : Unit
    + markFailed(id : Long, error : String) : Unit
  }
  class SyncOperation {
    + id : Long
    + entityType : String
    + idempotencyKey : UUID
    + payload : String
    + attempts : Int
    + status : SyncStatus
    + lastError : String?
  }
  class SyncWorker <<WorkManager>> {
    + doWork() : Result
  }
  class RetryPolicy {
    + delayFor(attempt : Int) : Duration
    + shouldGiveUp(attempt : Int) : Boolean
  }
  class ConnectivityMonitor {
    + isOnline : StateFlow<Boolean>
  }
  enum SyncStatus {
    PENDING
    IN_PROGRESS
    FAILED
    DONE
  }
}

package "core.database · FRONT" #F7F4EC {
  class GlifoDatabase <<Room @Database>> {
    + noteDao() : NoteDao
    + pageDao() : PageDao
    + studyItemDao() : StudyItemDao
    + coverageDao() : CoverageDao
    + syncOperationDao() : SyncOperationDao
    + courseContextDao() : LocalCourseContextDao
  }
  interface SyncOperationDao <<@Dao>>
  interface NoteDao <<@Dao>>
  interface LocalCourseContextDao <<@Dao>> {
    + upsert(ctx : LocalCourseContextEntity) : Unit
    + forCourse(courseId : Long) : LocalCourseContextEntity?
    + versions(courseId : Long) : ContextVersions?
  }
  class LocalCourseContextEntity <<Room @Entity>> {
    + courseId : Long
    + courseName : String
    + syllabusVersion : Int
    + glossaryVersion : Int
    + glossaryEntries : String
    + cachedAt : Instant
  }
  class Converters <<@TypeConverter>> {
    + jsonToContent(raw : String) : NoteContent
    + contentToJson(c : NoteContent) : String
  }
}

package "pipeline · FRONT" #F7F4EC {
  class LocalCourseContext <<domain>> {
    + courseId : Long
    + courseName : String
    + syllabusVersion : Int
    + glossaryVersion : Int
    + glossaryEntries : List<GlossaryEntry>
  }
  class PipelineEngine <<Facade>>
  class ConfidenceScorer <<pure>>
}

package "core.network · FRONT" #F7F4EC {
  class ApiClient <<Retrofit>>
  class AuthInterceptor <<OkHttp>> {
    + intercept(chain) : Response
  }
  class ErrorMapper {
    + map(code : Int, body : String?) : AppError
  }
}

SyncQueue --> SyncOperationDao
SyncQueue ..> SyncOperation
SyncOperation --> SyncStatus
SyncWorker --> SyncQueue
SyncWorker --> RetryPolicy
SyncWorker --> ApiClient
SyncWorker --> ConnectivityMonitor
GlifoDatabase --> SyncOperationDao
GlifoDatabase --> NoteDao
GlifoDatabase --> LocalCourseContextDao
GlifoDatabase --> Converters
LocalCourseContextDao --> LocalCourseContextEntity
LocalCourseContextEntity ..> LocalCourseContext : mapper
PipelineEngine --> LocalCourseContext
PipelineEngine --> ConfidenceScorer
ConfidenceScorer ..> LocalCourseContext : reads glossary
SyncWorker ..> LocalCourseContextDao : refreshes on reconnect
ApiClient --> AuthInterceptor
ApiClient --> ErrorMapper

note bottom of LocalCourseContext
  D-17. Without this, the pipeline
  cannot run offline: ConfidenceScorer
  needs the course glossary to score a
  region. glossaryVersion is what makes
  the cache invalidatable on reconnect.
end note

note bottom of RetryPolicy
  Exponential backoff with jitter.
  idempotencyKey is generated once,
  at enqueue time â€” never per attempt.
  That single choice is what makes
  a retry safe.
end note
@enduml
